--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!--============-LINK AL CSS============---->
-    <link rel="stylesheet" href="Css/estilo.css" id="tema">
+    <link rel="stylesheet" href="./css/estilo.css" id="tema">
 
 
     <title>ViajaYA</title>
@@ -122,7 +122,7 @@
             <ul class="destino__lista">
                 <!---========MIAMI========------>
                 <li class="destino__item">
-                    <img src="img/miami.jpg" alt="Miami">
+                    <img src="./Img/miami.jpg" alt="Miami">
                     <div class="destino__container">
                         <p class="destino__nombre">Miami </p>
                         <p class="destino__precio">Precio: $700.000</p>
@@ -131,7 +131,7 @@
                 </li>
                 <!---========LAS VEGAS========------>
                 <li class="destino__item">
-                    <img src="img/lasvegas.jpg" alt="Las Vegas">
+                    <img src="./Img/lasvegas.jpg" alt="Las Vegas">
                     <div class="destino__container">
                         <p class="destino__nombre">Las Vegas</p>
                         <p class="destino__precio">Precio: $600.000</p>
@@ -140,7 +140,7 @@
                 </li>
                 <!---========RIO DE JANEIRO========------>
                 <li class="destino__item">
-                    <img src="img/riojaneiro.jpg" alt="Rio de Janeiro">
+                    <img src="./Img/riojaneiro.jpg" alt="Rio de Janeiro">
                     <div class="destino__container">
                         <p class="destino__nombre">Rio de Janeiro</p>
                         <p class="destino__precio">Precio: $120.000</p>
@@ -149,7 +149,7 @@
                 </li>
                 <!---========BUZIOS-============----->
                 <li class="destino__item">
-                    <img src="img/buzios.jpg" alt="Buzios">
+                    <img src="./Img/buzios.jpg" alt="Buzios">
                     <div class="destino__container">
                         <p class="destino__nombre">Buzios</p>
                         <p class="destino__precio">Precio: $100.000</p>
@@ -158,7 +158,7 @@
                 </li>
                 <!----======--VIÑA DEL MAR---============--->
                 <li class="destino__item">
-                    <img src="img/viñamar.jpg" alt="Viña del Mar">
+                    <img src="./Img/viñamar.jpg" alt="Viña del Mar">
                     <div class="destino__container">
                         <p class="destino__nombre">Viña del mar</p>
                         <p class="destino__precio">Precio: $80.000</p>
@@ -167,7 +167,7 @@
                 </li>
                 <!--========-BARILOCHE-========----->
                 <li class="destino__item">
-                    <img src="img/bariloche.jpg" alt="Bariloche">
+                    <img src="./Img/bariloche.jpg" alt="Bariloche">
                     <div class="destino__container">
                         <p class="destino__nombre">Bariloche</p>
                         <p class="destino__precio">Precio: $90.000</p>
@@ -176,7 +176,7 @@
                 </li>
                 <!---- ======= ISLAS MALDIVIAS =====-->
             <li class="destino__item">
-                <img src="img/valdivias.jpg" alt="Islas Maldivas">
+                <img src="./Img/valdivias.jpg" alt="Islas Maldivas">
                 <div class="destino__container">
                     <p class="destino__nombre">Islas Maldivas</p>
                     <p class="destino__precio">Precio: $290.000</p>
@@ -185,7 +185,7 @@
             </li>
             <!---===== CANCUNN =====-->
             <li class="destino__item">
-                <img src="img/cancun.jpg" alt="Cancun">
+                <img src="./Img/cancun.jpg" alt="Cancun">
                 <div class="destino__container">
                     <p class="destino__nombre">Cancun</p>
                     <p class="destino__precio">Precio: $150.000</p>
@@ -194,7 +194,7 @@
             </li>
             <!--======== MARBELLA ========-->
             <li class="destino__item">
-                <img src="img/marbella.jpg" alt="Marbella">
+                <img src="./Img/marbella.jpg" alt="Marbella">
                 <div class="destino__container">
                     <p class="destino__nombre">Marbella</p>
                     <p class="destino__precio">Precio: $200.000</p>
@@ -234,7 +234,7 @@
             Contacto
         </h2>
         <div class="contacto__img">
-            <img src="img/contacto.jpg" alt="contacto">
+            <img src="./Img/contacto.jpg" alt="contacto">
         </div>
         <!--========--COMIENZO DEL FORMULARIO DE CONTACTO---========--->
         <div id="formulario">
@@ -359,7 +359,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
     <!---======== LINK AL JAVASCRIPT==========-->
-    <script src="js/main.js"></script>
+    <script src="./Js/main.js"></script>
 </body>
 
 </html>
